# solana-devtools

./: .gitignore  Cargo.toml  README.md  localnet.sh
anchor-transaction/: Cargo.toml  README.md
anchor-transaction/examples/: transaction.rs
anchor-transaction/src/: lib.rs
anchor-transaction/src/deserialize/: field.rs  idl_type_deserializer.rs  instruction.rs  mod.rs
anchor-transaction/src/fetch_idl/: discriminators.rs  mod.rs
anchor-utils/: Cargo.toml
anchor-utils/examples/: deserialize_account.rs  transaction.rs
anchor-utils/src/: lib.rs  pubkey.rs
anchor-utils/src/account_data/: associated_token.rs  idl.rs  mod.rs  system_account.rs  token.rs
anchor-utils/src/client/: account.rs
anchor-utils/src/deserialize/: account.rs  client.rs  discriminator.rs  idl.rs  idl_types.rs  mod.rs  value.rs
anchor-utils/src/deserialize/transaction/: mod.rs
anchor-utils/src/deserialize/transaction/instruction/: account_metas.rs  builtins.rs  data.rs  mod.rs  spl_programs.rs
anchor-utils/src/generated_account/: associated_token.rs  idl.rs  mod.rs  system_account.rs
anchor-utils/src/idl_sdk/: account.rs  instructions.rs  mod.rs
anchor-utils/tests/: deser.rs
anchor-utils/tests/fixtures/: marinade_idl.json  tcomp_idl.json
cli/: Cargo.toml  README.md  local_faucet.json  local_faucet_mint.json
cli-config/: Cargo.toml  README.md
cli-config/src/: config.rs  lib.rs
cli/example_scripts/: 01_init_local_faucet.sh  02_airdrop_local_faucet.sh  clean.sh  config.sh  full.sh
cli/src/: config.rs  faucet.rs  lib.rs  main.rs  name_service.rs  serde_pubkey_str.rs
errors/: Cargo.toml
errors/src/: anchor_lang_err.rs  banks_client_err.rs  client_err.rs  instruction_err.rs  lib.rs  transaction_err.rs
example_scripts/: 01_init_local_faucet.sh  02_airdrop_local_faucet.sh  full.sh
extra-signers/: Cargo.toml  README.md
extra-signers/examples/: usb.rs
extra-signers/src/: concrete_signer.rs  lib.rs  threadsafe_signer.rs
faucet/: Cargo.toml  README.md
faucet/example_scripts/: 01_init_local_faucet.sh  config.sh  localnet.sh
faucet/lib/: program_ids.md
faucet/src/: config.rs  lib.rs  main.rs
localnet/: Cargo.toml  README.md
localnet/src/: cli.rs  error.rs  idl.rs  lib.rs  localnet_account.rs  localnet_configuration.rs  test_toml_generator.rs  test_validator.rs  trait_based.rs
localnet/src/from_anchor/: cli.rs  mod.rs  token.rs
localnet/src/localnet_account/: idl.rs  mod.rs  system_account.rs  token.rs  trait_based.rs
localnet/tests/localnet_cli/: Anchor.toml  localnet.sh  package.json
localnet/tests/localnet_cli/localnet/: Cargo.toml
localnet/tests/localnet_cli/localnet/src/: suite_one.rs  suite_two.rs
localnet/tests/localnet_cli/programs/test-program/: Cargo.toml
localnet/tests/localnet_cli/tests/suite-1/: Test.toml  accounts.ts  test.ts  test_user_token_act.json
localnet/tests/localnet_cli/tests/suite-2/: Test.toml  accounts.ts  test_user_token_act.json  usdc_mint.json
localnet/tests/project/: build_localnet.sh
localnet/tests/project/client/: Cargo.toml
localnet/tests/project/localnet/src/: main.rs
localnet/tests/project/tests/suite-1/: Test.toml  mint.json  test_user.json
localnet/tests/project/tests/suite-2/: mint.json  test_user.json
macros/: Cargo.toml
macros/src/: const_data.rs  lib.rs
macros/tests/: constants.rs  named_pubkeys.rs
mock_runtime/: Cargo.toml
mock_runtime/src/: lib.rs  message_processing.rs
mock_runtime/src/spl_programs/: mod.rs
monitoring/: Cargo.toml
monitoring/src/: account_polling.rs  event_log_sub.rs  lib.rs  log_parsing.rs
pubkey/: Cargo.toml
pubkey/src/: pubkey.rs
rpc/: Cargo.toml  README.md
rpc-client-headers/: Cargo.toml
rpc-client-headers/src/: lib.rs
rpc/src/: error.rs  lib.rs  middleware.rs
rpc/src/service/: mod.rs
rpc/src/service/json_rpc/: mod.rs  stats_updater.rs
serde-pubkey-str/: Cargo.toml  README.md
serde-pubkey-str/src/: lib.rs  serde_pubkey_str.rs
serde-str/: Cargo.toml
serde-str/src/: error.rs  lib.rs  option_pubkey.rs  option_signature.rs  pubkey.rs  signature.rs
simulator/: Cargo.toml
simulator/src/: lib.rs
simulator/src/program_test_private_items/: mod.rs  syscall_stubs.rs
spl-token-ext/: Cargo.toml
spl-token-ext/src/: main.rs
spl-token-faucet-cli/: Cargo.toml
spl-token-faucet-cli/src/: config.rs  lib.rs  main.rs
tests/example_project/: README.md  expanded.rs
tests/example_project/localnet/: Cargo.toml
tests/example_project/localnet/src/: lib.rs  suite_one.rs  suite_two.rs
tests/example_project/localnet/tests/: local_tests.rs
tests/example_project/programs/test-program/: Cargo.toml
tests/example_project/programs/test-program/src/: lib.rs
tests/example_project/programs/test-program/tests/: local_tests.rs  suite_one.rs
tests/example_project/programs/test-program/tests/fixtures/: usdt.json
tests/example_project/scripts/: localnet_suite_1.sh  localnet_suite_2.sh
tests/project/: Cargo.toml  README.md  build_localnet.sh
tests/project/client/: Cargo.toml
tests/project/client/src/: lib.rs
tests/project/localnet/: Cargo.toml
tests/project/programs/test-program/: Cargo.toml
tests/project/programs/test-program/src/: lib.rs
transaction/: Cargo.toml  README.md
transaction/src/: decompile_instructions.rs  error.rs  inner_instructions.rs  lib.rs  mutated_instruction.rs
utils/: Cargo.toml
utils/src/: lib.rs  pubkey.rs
