[workspace]
members = [
    "anchor-utils",
    "cli",
    "cli-config",
    "extra-signers",
    "localnet",
    "mock_runtime",
    "monitoring",
    "rpc",
    "serde-str",
    "transaction",
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.74"
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
anchor-syn = { version = "0.28.0", features = ["idl", "hash"] }
solana-address-lookup-table-program = "<1.16.24"
solana-client = "<1.16.24"
solana-faucet = "<1.16.24"
solana-program = "<1.16.24"
solana-bpf-loader-program = "<1.16.24"
solana-program-runtime = "<1.16.24"
solana-runtime = "<1.16.24"
solana-program-test = "<1.16.24"
solana-sdk = "<1.16.24"
solana-account-decoder = "<1.16.24"
solana-remote-wallet = "<1.16.24"
solana-rpc-client = "<1.16.24"
solana-transaction-status = "<1.16.24"
solana-clap-v3-utils = "<1.16.24"
solana-cli-config = "<1.16.24"
solana-version = "<1.16.24"
solana-bpf-simulator = { git = "https://github.com/dovahcrow/solana-bpf-simulator" }
solana_rbpf = "0.6"
spl-token = "3.2"
spl-associated-token-account = "1.1.2"
clap = { version = "3", features = [ "derive", "env" ] }
serde = "1.0.193"
serde_json = "1.0.108"
spl-memo = { version = "3", features = ["no-entrypoint"] }
bincode = "1"
lazy_static = "1.4.0"
log = "0.4"
tokio = "1"
anyhow = "1.0.76"
base64 = "0.21.5"

solana-devtools-cli-config = { path = "cli-config" }
solana-devtools-serde = { path = "serde-str" }
solana-devtools-signers = { path = "extra-signers" }
solana-devtools-localnet = { path = "localnet" }
solana-devtools-tx = { path = "transaction" }
solana-mock-runtime = { path = "mock_runtime" }
solana-devtools-anchor-utils = { path = "anchor-utils" }
