[workspace]
members = [
    "anchor-utils",
    "cli",
    "cli-config",
    "extra-signers",
    "localnet",
    "macros",
    "monitoring",
    "rpc",
    "serde-str",
    "simulator",
    "transaction"
, "utils"]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.74"
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
anchor-syn = { version = "0.29.0", features = ["idl-types", "idl-parse", "hash"] }
solana-address-lookup-table-program = "1.17"
solana-accounts-db = "1.17"
solana-client = "1.17"
solana-faucet = "1.17"
solana-program = "1.17"
solana-bpf-loader-program = "1.17"
solana-program-runtime = "1.17"
solana-runtime = "1.17"
solana-program-test = "1.17"
solana-sdk = "1.17"
solana-account-decoder = "1.17"
solana-remote-wallet = "1.17"
solana-banks-server = "1.17"
solana-banks-interface = "1.17"
solana-banks-client = "1.17"
solana-vote-program = "1.17"
solana-rpc-client = "1.17"
solana-transaction-status = "1.17"
solana-clap-v3-utils = "1.17"
solana-cli-config = "1.17"
solana-version = "1.17"
spl-token = { version = "4", features = ["no-entrypoint"] }
spl-associated-token-account = "2"
clap = { version = "3", features = [ "derive", "env" ] }
serde = "1.0.193"
serde_json = "1.0.108"
spl-memo = { version = "3", features = ["no-entrypoint"] }
bincode = "1"
lazy_static = "1.4.0"
log = "0.4"
tokio = "1"
anyhow = "1.0.76"
base64 = "0.21.5"
ahash = "=0.8.6"
thiserror = "1.0.56"

solana-devtools-cli-config = { path = "cli-config" }
solana-devtools-serde = { path = "serde-str" }
solana-devtools-signers = { path = "extra-signers" }
solana-devtools-localnet = { path = "localnet" }
solana-devtools-tx = { path = "transaction" }
solana-devtools-simulator = { path = "simulator" }
solana-devtools-anchor-utils = { path = "anchor-utils" }
solana-devtools-macros = { path = "macros" }
solana-devtools-utils = { path = "utils" }
