[package]
name = "anchor-transaction-deser"
authors = ["Eric Brightfield"]
version = "0.1.3"
edition = "2021"

[dependencies]
anchor-syn = { version = "0.27.0", features = ["idl"] }
anchor-lang = { version = "0.27.0" }
anyhow = "1.0.66"
serde_json = { version  = "1.0.88", features = ["preserve_order"] }
serde = "1.0.148"
borsh = "0.9.3"
heck = "0.3.1"
solana-client = "1.15"
solana-program = "1.15"
solana-sdk = "1.15"
solana-account-decoder = "1.15"
solana-transaction-status = "1.15"
flate2 = "1.0.24"
base64 = "0.20.0-alpha.1"
bincode = "2.0.0-rc.2"
