[package]
name = "anchor-transaction-deser"
authors = ["Eric Brightfield"]
version = "0.2.0"
edition = "2021"

[dependencies]
anchor-syn = { workspace = true }
anchor-lang = { workspace = true }
anyhow = "1.0.66"
serde_json = { version  = "1.0.88", features = ["preserve_order"] }
serde = "1.0.148"
borsh = "0.9.3"
heck = "0.3.1"
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-account-decoder = { workspace = true }
solana-transaction-status = { workspace = true }
flate2 = "1.0.24"
base64 = "0.20.0-alpha.1"
bincode = "2.0.0-rc.2"
