[package]
name = "solana-devtools-cli-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
solana-sdk = "1.15"
solana-clap-v3-utils = "1.15"
solana-cli-config = "1.15"
clap = { version = "3.2.23", features = [ "derive", "env" ] }
