[package]
name = "solana-devtools-cli-config"
version = "0.3.0"
edition = "2021"

[features]
default = ["remote-wallet"]
env = ["clap/env"]
remote-wallet = ["solana-devtools-signers/remote-wallet"]

[dependencies]
anyhow = "1.0.58"
solana-sdk = { workspace = true }
solana-clap-v3-utils = { workspace = true }
solana-cli-config = { workspace = true }
clap = { workspace = true }
solana-devtools-signers = { workspace = true }
tokio = { workspace = true }
