[package]
name = "solana-devtools-cli"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "solana-devtools"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.58"
serde_json = "1.0.96"
solana-sdk = "1.14"
solana-client = "1.14"
solana-clap-v3-utils = "1.14"
solana-cli-config = "1.14"
spl-token = "3.2.0"
spl-associated-token-account = "1.1.2"
spl-token-faucet = { version = "0.0.1", git = "https://github.com/paul-schaaf/spl-token-faucet.git" }
anchor-spl = "0.27.0"
anchor-lang = "0.27.0"
clap = { version = "3.2.23", features = [ "derive", "env" ] }
solana-devtools-cli-config = { path = "../cli-config" }
solana-devtools-faucet = { path = "../faucet" }
anchor-transaction-deser = { path = "../anchor-transaction" }
spl-name-service = { version = "0.2.0", features = ["no-entrypoint"] }
base58 = "0.2.0"
bincode = "1.3.3"
spl-memo = { version = "3", features = ["no-entrypoint"] }
