[package]
name = "solana-devtools-cli"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "solana-devtools"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.58"
serde_json = "1.0.96"
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-clap-v3-utils = { workspace = true }
solana-cli-config = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token-faucet = { version = "0.0.1", git = "https://github.com/paul-schaaf/spl-token-faucet.git" }
anchor-spl = { workspace = true }
anchor-lang = { workspace = true }
clap = { workspace = true }
solana-devtools-cli-config = { path = "../cli-config" }
solana-devtools-faucet = { path = "../faucet" }
anchor-transaction-deser = { path = "../anchor-transaction" }
spl-name-service = { version = "0.2.0", features = ["no-entrypoint"] }
base58 = "0.2.0"
bincode = "1.3.3"
spl-memo = { version = "3", features = ["no-entrypoint"] }
