[package]
name = "solana-devtools-cli"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "solana-devtools"
path = "src/main.rs"

[features]
default = []

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-clap-v3-utils = { workspace = true }
spl-token = { workspace = true }
anchor-spl = { workspace = true }
anchor-lang = { workspace = true }
clap = { workspace = true }
solana-devtools-cli-config = { workspace = true }
solana-devtools-tx = { workspace = true, features = ["async_client"] }
solana-devtools-anchor-utils = { workspace = true }
bincode = { workspace = true }
spl-memo = { workspace = true }
tokio = { workspace = true }
