[package]
name = "solana-devtools-signers"
version = "0.1.1"
edition = "2021"
description = "An assortment of useful signer types for Solana development"

[[example]]
name = "usb"

[dependencies]
anyhow = "1.0.68"
solana-sdk = "1.14"
solana-program = "1.14"
solana-remote-wallet = "1.14"
solana-clap-v3-utils = "1.14"
uriparse = "0.6.4"
