[package]
name = "solana-devtools-signers"
version = "0.2.0"
edition = "2021"
description = "An assortment of useful signer types for Solana development"

[[example]]
name = "usb"

[dependencies]
anyhow = "1.0.68"
solana-sdk = { workspace = true }
solana-program = { workspace = true }
solana-remote-wallet = { workspace = true }
solana-clap-v3-utils = { workspace = true }
uriparse = "0.6.4"
