[package]
name = "solana-devtools-faucet"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
solana-sdk = { workspace = true }
solana-client = { workspace = true }
spl-token-faucet = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
anchor-spl = { workspace = true }
anchor-lang = { workspace = true }
clap = { workspace = true }