[package]
name = "solana-devtools-localnet"
version = "0.29.1"
edition = "2021"

[features]
default = ["solana-devtools-simulator", "idl"]
idl = ["solana-devtools-anchor-utils"]

[dependencies]
anchor-syn = { workspace = true }
anchor-lang = { workspace = true }
spl-token = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-accounts-db = { workspace = true }
Inflector = "0.11.4"
thiserror = "1.0.50"
serde_json = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
solana-devtools-serde = { workspace = true }
bincode = { workspace = true }
solana-devtools-simulator = { workspace = true, optional = true }
solana-devtools-anchor-utils = { workspace = true, optional = true }
base64 = "0.21.5"
