[package]
name = "solana-devtools-macros"
version = "0.3.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
solana-devtools-pubkey = { workspace = true }
solana-program = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
solana-sdk = { workspace = true }
