[package]
name = "solana-mock-runtime"
version = "0.1.0"
edition = "2021"

[features]
default = ["anchor"]
anchor = ["anchor-lang"]

[dependencies]
solana-sdk = { workspace = true }
solana-program = { workspace = true }
solana-program-runtime = { workspace = true }
solana-runtime = { workspace = true }
solana-bpf-loader-program = { workspace = true }
solana_rbpf = { workspace = true }
bincode = { workspace = true }
lazy_static = { workspace = true }
anchor-lang = { workspace = true, optional = true }

[dev-dependencies]
anchor-lang = { workspace = true }
