[package]
name = "solana-devtools-monitoring"
version = "0.3.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-version = { workspace = true }
anchor-lang = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
