[package]
name = "solana-devtools-rpc"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.81"
serde = "1.0.140"
reqwest = "0.11.12"
async-trait = "0.1.58"
log = "0.4.17"
tokio = "1.14.1"
solana-sdk = "1.14"
solana-client = "1.14"
solana-version = "1.14"

[dev-dependencies]
jsonrpc-core = "18.0.0"
solana-client = "1.14"
jsonrpc-http-server = "18.0.0"
crossbeam-channel = "0.5"
futures = "0.3"
futures-util = "0.3.21"
