[package]
name = "solana-devtools-rpc"
version = "0.5.0"
edition = "2021"

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
reqwest = "0.11.12"
async-trait = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-version = { workspace = true }
solana-rpc-client = { workspace = true }
tower = { version = "0.4.13", features = ["util"] }

[dev-dependencies]
jsonrpc-core = "18.0.0"
solana-client = { workspace = true }
jsonrpc-http-server = "18.0.0"
crossbeam-channel = "0.5"
futures = "0.3"
futures-util = "0.3.21"
tower = { version = "0.4.13", features = ["filter", "limit", "util"] }
