[package]
name = "spl-token-ext"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spl-token-ext"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.58"
solana-sdk = "1.15"
solana-client = "1.15"
solana-clap-v3-utils = "1.15"
solana-cli-config = "1.15"
spl-token = "3.2.0"
spl-associated-token-account = "1.1.2"
anchor-spl = "0.27.0"
anchor-lang = "0.27.0"
clap = { version = "3.2.23", features = [ "derive", "env" ] }
solana-devtools-cli = { path = "../cli" }