[package]
name = "solana-devtools-tx"
version = "0.29.1"
edition = "2021"

[features]
default = []
client = ["solana-client"]
async_client = ["client"]

[dependencies]
solana-sdk = { workspace = true }
bincode = { workspace = true }
solana-client = { workspace = true, optional = true }
solana-address-lookup-table-program = { workspace = true }
solana-program = { workspace = true }
solana-transaction-status = { workspace = true }

[dev-dependencies]
spl-memo = { workspace = true }
