[package]
name = "test-localnet"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-devtools-anchor-utils = { path = "../../../anchor-utils" }
test-program = { path = "../programs/test-program" }
clap = "3"
solana-sdk = "1.17"
solana-client = "1.17"
solana-cli-output = "1.17"
anyhow = "1.0.66"
spl-token = { version = "4", features = ["no-entrypoint"] }
serde_json = "1.0.108"
lazy_static = "1.4.0"

[dev-dependencies]
solana-sdk = "1.17"
spl-associated-token-account = { version = "2", features = ["no-entrypoint"] }
solana-devtools-simulator = { path = "../../../simulator" }
solana-devtools-tx = { path = "../../../transaction" }
solana-program-test = "1.17"
anchor-lang = "0.29.0"
tokio = "1"
